# global-exchange

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
0_help/: README.md
1_introduction/: README.md
1_introduction/1_overview/: README.md
1_introduction/2_analytics/: README.md
1_introduction/3_agile/: README.md
1_introduction/4_self_assessment/: README.md
1_introduction/5_installing_python/: README.md
1_introduction/6_setting_up_pycharm/: README.md
1_introduction/7_setting_up_mip_go/: README.md
1_introduction/8_commit_push_pull/: README.md
1_introduction/next_steps/: README.md
2_documentation/: README.md
2_documentation/1_markdown/: README.md
2_documentation/2_jupyter_notebook/: README.md
2_documentation/3_latex/: README.md
2_documentation/4_docstring/: README.md
2_documentation/next_steps/: README.md
3_discover/: README.md
3_discover/1_business_context/: README.md
3_discover/2_problem_scoping/: README.md
3_discover/3_dealing_with_clients/: README.md
3_discover/4_types_of_decision_problems/: README.md
3_discover/next_steps/: README.md
4_define/1_data/: README.md
4_define/2_data_schemas/: README.md
4_define/3_development_instance/: README.md
4_define/4_data_validation/: README.md
4_define/5_modeling/: README.md
4_define/6_algorithms/: README.md
docs/: global_exchange_formulation.ipynb
global_exchange/: __init__.py  action_preprocess_data.py  main.py  schemas.py
mip_me/: README.md  schemas.py  setup.cfg  setup.py
test_global_exchange/: test_execute_locally.py
test_mip_me/: test_execute_locally.py
(+41 files in other folders)
