[metadata]
name = global_exchange
version = attr: global_exchange.__version__
author = Luiz Kubaski
author_email = contact@mipwise.com
description = Currency transfer with price tiers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mipwise/global-exchange
project_urls =
    Bug Tracker = https://github.com/mipwise/global-exchange/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = currency_exchange
install_requires =
    ticdat>=0.2.22
    pandas>=1.4.3
    pulp>=2.7.0
python_requires = >=3.8
